// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart component elements Cart has 0 item 1`] = `
<div
  className="cart"
>
  <p
    className="empty-cart"
  >
    The cart is empty
  </p>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      0.00
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Cart has 1 item 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={4}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-D
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          135.66
           x 
          1
           = 
          135.66
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      135.66
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      138.66
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Cart has 2 item 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={4}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-D
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          135.66
           x 
          1
           = 
          135.66
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      248.56
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      251.56
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Cart lost 1 item 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      112.90
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      115.90
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Solo item test CartItem 5 has amount 2 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="cart-item"
    data-productId={5}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-E
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          136.68
           x 
          2
           = 
          273.36
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            2
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      386.26
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      389.26
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Solo item test CartItem 5 has amount 2 2`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="cart-item"
    data-productId={5}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-E
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          136.68
           x 
          2
           = 
          273.36
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            2
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      386.26
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      389.26
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Solo item test CartItem 5 has amount 3 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="cart-item"
    data-productId={5}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-E
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          136.68
           x 
          3
           = 
          410.04
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            3
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      522.94
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      525.94
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;

exports[`Cart component elements Solo item test CartItem 5 has no stock 1`] = `
<div
  className="cart"
>
  <div
    className="cart-item"
    data-productId={7}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-G
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          112.90
           x 
          1
           = 
          112.90
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="add"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            1
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    className="cart-item"
    data-productId={5}
  >
    <div
      className="item-view"
    >
      <div
        className="item__features"
      >
        <h5>
          product-E
        </h5>
      </div>
    </div>
    <div
      className="item-value"
    >
      <div
        className="item__prize"
      >
        <span
          className="prize"
        >
          prize
        </span>
        <span
          className="value"
        >
          136.68
           x 
          13
           = 
          1776.84
        </span>
      </div>
      <div
        className="item-buttons"
      >
        <span
          className="units"
        >
          units
        </span>
        <span
          className="buttons"
        >
          <button
            className="adddisabled"
            data-add={true}
            onClick={[Function]}
          >
            +
          </button>
          <span
            className="amount"
          >
            13
          </span>
          <button
            className="subtract"
            data-subtract={true}
            onClick={[Function]}
          >
            -
          </button>
        </span>
      </div>
      <div
        className="no-stock"
      >
        Out of existences
      </div>
    </div>
  </div>
  <div
    className="items-total"
  >
    <span
      className="label"
    >
      Total cart value
    </span>
    <span
      className="value"
    >
      1889.74
       $
    </span>
  </div>
  <div
    className="shipment"
  >
    <span
      className="label"
    >
      shipment cost
    </span>
    <span
      className="value"
    >
      3.00
       $
    </span>
  </div>
  <div
    className="order-total"
  >
    <span
      className="label"
    >
      total cost order
    </span>
    <span
      className="value"
    >
      1892.74
       $
    </span>
  </div>
  <span
    className="checkout-button"
  >
    checkout
  </span>
</div>
`;
